--- a/prow-config/labels.yaml
+++ b/prow-config/labels.yaml
@@ -1,6 +1,18 @@
 ---
 default:
   labels:
+    - color: 0ffa16
+      description: Indicates a PR has been approved by an approver from all required OWNERS files.
+      name: approved
+      target: prs
+      prowPlugin: approve
+      addedBy: approvers
+    - color: 15dd18
+      description: Indicates that a PR is ready to be merged.
+      name: lgtm
+      target: prs
+      prowPlugin: lgtm
+      addedBy: reviewers or members
     - color: e11d21
       description: Indicates that a PR should not merge because someone has issued a /hold command.
       name: do-not-merge/hold
@@ -46,33 +58,21 @@ default:
     - name: size/L
       color: ee9900
       target: both
-      previously:
-        - name: size-L
-          color: f9d0c4
       addedBy: prow
       prowPlugin: size
     - name: size/M
       color: eebb00
       target: both
-      previously:
-        - name: size-M
-          color: f9d0c4
       addedBy: prow
       prowPlugin: size
     - name: size/S
       color: 77bb00
       target: both
-      previously:
-        - name: size-S
-          color: f9d0c4
       addedBy: prow
       prowPlugin: size
     - name: size/XL
       color: ee5500
       target: both
-      previously:
-        - name: size-XL
-          color: f9d0c4
       addedBy: prow
       prowPlugin: size
     - color: "009900"
