fixed jobs configuration

--- a/prow-config/plugins.yaml
+++ b/prow-config/plugins.yaml
@@ -2,12 +2,16 @@ config_updater:
   maps:
     prow-config/config.yaml:
       name: config
+      namespace: default
     prow-config/jobs/**/*.yaml:
       name: job-config
+      namespace: default
     prow-config/plugins.yaml:
       name: plugins
+      namespace: default
     prow-config/labels.yaml:
       name: label-config
+      namespace: default
 
 plugins:
   the-shadowmen:
