--- a/prow-config/plugins.yaml
+++ b/prow-config/plugins.yaml
@@ -2,12 +2,16 @@ config_updater:
   maps:
     prow-config/config.yaml:
       name: config
+      namespace: default
     prow-config/jobs/**/*.yaml:
       name: job-config
+      namespace: default
     prow-config/plugins.yaml:
       name: plugins
+      namespace: default
     prow-config/labels.yaml:
       name: label-config
+      namespace: default
 
 plugins:
   the-shadowmen:
@@ -24,11 +28,9 @@ plugins:
   - pony
   - dog
   - cat
-  - dco
 
   the-shadowmen/prow-devconf:
   - trigger
-  - release-note
   - owners-label
   - lgtm
   - approve
@@ -36,14 +38,12 @@ plugins:
 
   the-shadowmen/kubevirtci:
   - trigger
-  - release-note
   - owners-label
   - lgtm
   - approve
 
   the-shadowmen/kubevirt-tutorial:
   - trigger
-  - release-note
   - owners-label
   - lgtm
   - approve
